# F1_Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt  init.sql
include/: circuit.h  circuit_info.h  circuits_fonctions.h  config.h  courses.h  curl_fonctions.h  menu.h  mysql.h  pilots_fonctions.h  settings.h  start.h  statistiques.h
src/: circuit.cpp  circuit_info.cpp  circuits_fonctions.c  config.c  courses.cpp  curl_fonctions.c  main.cpp  menu.cpp  mysql.c  pilots_fonctions.c  settings.cpp  start.cpp  statistiques.cpp  style.css
src/css/: menu.css
